# E-Learning_Platform

./: .gitignore  AUTHENTICATION_COMPLETE.md  QUICKSTART.md  QUICK_SETUP.md  README.md  main.py  pyproject.toml  requirements.txt  start_app.bat  start_app.sh
backend/: __init__.py  app.py  config.py  database.py  requirements.txt
backend/middleware/: auth.py
backend/models/: completion.py  course.py  enrollment.py  user.py
backend/routes/: auth.py  courses.py
backend/utils/: auth.py  db.py
frontend/: README.md  nodemon.json  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.jsx
frontend/src/components/: CourseCard.jsx  ErrorMessage.jsx  LoadingSpinner.jsx  Navbar.jsx  Navigation.js  ProtectedRoute.js  ProtectedRoute.jsx  Toast.jsx
frontend/src/context/: AuthContext.jsx  ToastContext.jsx
frontend/src/contexts/: AuthContext.js
frontend/src/pages/: CourseDetailPage.jsx  CourseListPage.jsx  CoursesPage.js  HomePage.js  HomePage.jsx  LoginPage.js  LoginPage.jsx  SignUpPage.js  SignUpPage.jsx
frontend/src/services/: api.js
frontend/src/utils/: auth.js
screenshots/: README.md
